--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
 
 <body>
     <div class="header">
-        <a href="./index.html">
-            <img class="headshot" src="./headshot.jpg" alt="Photo of Kim" />
-        </a>
         <h1 class="title">Kim Barrett</h1>
+        <img class="headshot" src="./headshot.jpg" alt="Photo of Kim" />
     </div>
     <ul class="nav_bar">
-        <li class="current"><a href="./index.html">About Me</a></li>
-        <li><a href="./contact.html">Contact</a></li>
+        <li class="nav_bar_item current"><a href="./index.html">About Me</a></li>
+        <li class="nav_bar_item"><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="contents">
         <p>Hello!</p>
