Add portfolio & change nav bar.

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,8 @@
     </div>
     <ul class="nav_bar">
         <li><a href="./index.html">About Me</a></li>
-        <li class="current"><a href="./contact.html">Contact</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
+        <li class="current right_nav_button"><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="contents">
         <p>Talk to me</p>
