--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,12 @@
         <img class="headshot" src="./headshot.jpg" alt="Photo of Kim" />
     </div>
     <ul class="nav_bar">
-        <li class="current"><a href="./index.html">About Me</a></li>
-        <li><a href="./portfolio.html">Portfolio</a></li>
+        <li><a href="./index.html">About Me</a></li>
+        <li class="current"><a href="./portfolio.html">Portfolio</a></li>
         <li class="right_nav_button"><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="contents">
-        <p>Hello!</p>
+        <p>Things I've done:</p>
     </div>
     <p class="footer">Copyright © 2019</p>
 </body>
