--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
 <body>
     <div class="header">
-        <h1 class="title">Kim Barrett</h1>
+        <div class="header_text">
+            <h1 class="title">Kim Barrett</h1>
+            <h1 class="subtitle">Freelance writer</h1>
+        </div>
         <img class="headshot" src="./headshot.jpg" alt="Photo of Kim" />
     </div>
     <ul class="nav_bar">
