--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <h1 class="title">Kim Barrett</h1>
             <h1 class="subtitle">Freelance writer</h1>
         </div>
-        <img class="headshot" src="./headshot.jpg" alt="Photo of Kim" />
+        <img class="headshot" src="./images/headshot.jpg" alt="Photo of Kim" />
     </div>
     <ul class="nav_bar">
         <li><a href="./index.html">About Me</a></li>
@@ -19,9 +19,22 @@
         <li class="current right_nav_button"><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="contents">
-        <p>Talk to me</p>
+        <table class="contact_table">
+            <tr>
+                <td class="contact_icon_cell">
+                    <image class="contact_icon" src="./images/email.png" />
+                </td>
+                <td>kimbarrett92@gmail.com</td>
+            </tr>
+            <tr>
+                <td class="contact_icon_cell">
+                    <image class="contact_icon" src="./images/twitter.png" />
+                </td>
+                <td><a href="https://twitter.com/kimbarrett92">@kimbarrett92</td>
+            </tr>
+        </table>
     </div>
-    <p class="footer">Copyright © 2019</p>
+    <p class="footer">© 2019 Kim Barrett. All Rights Reserved.</p>
 </body>
 
 </html>
