--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
             <h1 class="title">Kim Barrett</h1>
             <h1 class="subtitle">Freelance writer</h1>
         </div>
-        <img class="headshot" src="./headshot.jpg" alt="Photo of Kim" />
+        <img class="headshot" src="./images/headshot.jpg" alt="Photo of Kim" />
     </div>
     <ul class="nav_bar">
         <li><a href="./index.html">About Me</a></li>
@@ -19,9 +19,12 @@
         <li class="right_nav_button"><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="contents">
-        <p>Things I've done:</p>
+        <p>See below for some examples of my previous work.</p>
+        <table>
+            <tr><td>13th June 2019</td><td><a href="https://medium.com/@kimbarrett92/poison-by-any-other-name-6705206934d4">Poison by any other name</a></td></tr>
+            </table>
     </div>
-    <p class="footer">Copyright © 2019</p>
+    <p class="footer">© 2019 Kim Barrett. All Rights Reserved.</p>
 </body>
 
 </html>
