--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1 class="title">Kim Barrett</h1>
             <h1 class="subtitle">Freelance writer</h1>
         </div>
-        <img class="headshot" src="./headshot.jpg" alt="Photo of Kim" />
+        <img class="headshot" src="./images/headshot.jpg" alt="Photo of Kim" />
     </div>
     <ul class="nav_bar">
         <li class="current"><a href="./index.html">About Me</a></li>
@@ -19,9 +19,21 @@
         <li class="right_nav_button"><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="contents">
-        <p>Hello!</p>
+        <p>I'm a freelance writer living in Oxford, UK.</p>
+        <p>
+            I worked as a Java software developer for 5 years working.
+            During this time I developed a deep interest in testing and architecting 
+            code to be easily tested.
+            I worked with AWS, micro-services and serverless architecture.
+            I am always keen to share through writing the skills and techniques I developed.
+        </p>
+        <p>
+            My other interests include language, sexuality and mental health, but 
+            I love learning more and will write about most topics.
+        </p>
+        <p>Please <a href="./contact.html">get in touch</a> to discuss your requirements.</p>
     </div>
-    <p class="footer">Copyright © 2019</p>
+    <p class="footer">© 2019 Kim Barrett. All Rights Reserved.</p>
 </body>
 
 </html>
