--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <div class="contents">
         <p>I'm a freelance writer living in Oxford, UK.</p>
         <p>
-            I worked as a Java software developer for 5 years working.
+            I worked as a Java software developer for 5 years.
             During this time I developed a deep interest in testing and architecting 
             code to be easily tested.
             I worked with AWS, micro-services and serverless architecture.
-            I am always keen to share through writing the skills and techniques I developed.
+            I am always keen to share, through writing, the skills and techniques I developed.
         </p>
         <p>
             My other interests include language, sexuality and mental health, but 
