Make email clickable.

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,11 @@
                 <td class="contact_icon_cell">
                     <image class="contact_icon" src="./images/email.png" />
                 </td>
-                <td>kimbarrett92@gmail.com</td>
+                <td>
+                    <a href="mailto:kimbarrett92@gmail.com" target="_blank">
+                        kimbarrett92@gmail.com
+                    </a>
+                </td>
             </tr>
             <tr>
                 <td class="contact_icon_cell">
