Add medium & github links.

--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,18 @@
                 <td class="contact_icon_cell">
                     <image class="contact_icon" src="./images/twitter.png" />
                 </td>
-                <td><a href="https://twitter.com/kimbarrett92">@kimbarrett92</td>
+                <td>
+                    <a href="https://twitter.com/kimbarrett92" target="_blank">
+                        @kimbarrett92
+                    </a>
+                </td>
             </tr>
         </table>
+        <h3>Find me elsewhere on the internet:</h3>
+        <ul class="profile_list">
+            <li><a href="https://medium.com/@kimbarrett92" target="_blank">Medium</a></li>
+            <li><a href="https://github.com/kbarrett" target="_blank">GitHub</a></li>
+        </ul>
     </div>
     <p class="footer">© 2019 Kim Barrett. All Rights Reserved.</p>
 </body>
