--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <li class="right_nav_button"><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="contents">
-        <p>See below for some examples of my previous work.</p>
+        <h3>See below for some examples of my previous work.</h3>
         <table>
             <tr><td>13th June 2019</td><td><a href="https://medium.com/@kimbarrett92/poison-by-any-other-name-6705206934d4">Poison by any other name</a></td></tr>
             </table>
