--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
         <li class="current right_nav_button"><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="contents">
+        <h3>Get in touch!</h3>
         <table class="contact_table">
             <tr>
                 <td class="contact_icon_cell">
