Add logo to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,16 @@
     </ul>
     <div class="contents">
         <h3>See below for some examples of my previous work.</h3>
-        <table>
-            <tr><td>13th June 2019</td><td><a href="https://medium.com/@kimbarrett92/poison-by-any-other-name-6705206934d4">Poison by any other name</a></td></tr>
+        <table class="portfolio_table">
+            <tr>
+                <td>13th June 2019</td>
+                <td>
+                    <img class="portfolio_source_image" src="./images/medium.png"/>
+                </td>
+                <td>
+                    <a href="https://medium.com/@kimbarrett92/poison-by-any-other-name-6705206934d4">Poison by any other name</a>
+                </td>
+            </tr>
             </table>
     </div>
     <p class="footer">© 2019 Kim Barrett. All Rights Reserved.</p>
