Re-jig contact page.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
         </p>
         <p>Please <a href="./contact.html">get in touch</a> to discuss your requirements.</p>
     </div>
-    <p class="footer">© 2019 Kim Barrett. All Rights Reserved.</p>
+    <div class="footer">
+        <ul class="profile_list">
+            <li><a href="https://twitter.com/kimbarrett92" target="_blank">Twitter</a></li>
+            <li>·</li>
+            <li><a href="https://medium.com/@kimbarrett92" target="_blank">Medium</a></li>
+            <li>·</li>
+            <li><a href="https://github.com/kbarrett" target="_blank">GitHub</a></li>
+        </ul>
+        <p>© 2019 Kim Barrett. All Rights Reserved.</p>
+    </div>
 </body>
 
 </html>
