--- a/contact.html
+++ b/contact.html
@@ -19,36 +19,26 @@
         <li class="current right_nav_button"><a href="./contact.html">Contact</a></li>
     </ul>
     <div class="contents">
-        <h3>Get in touch!</h3>
-        <table class="contact_table">
-            <tr>
-                <td class="contact_icon_cell">
-                    <image class="contact_icon" src="./images/email.png" />
-                </td>
-                <td>
-                    <a href="mailto:kimbarrett92@gmail.com" target="_blank">
-                        kimbarrett92@gmail.com
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td class="contact_icon_cell">
-                    <image class="contact_icon" src="./images/twitter.png" />
-                </td>
-                <td>
-                    <a href="https://twitter.com/kimbarrett92" target="_blank">
-                        @kimbarrett92
-                    </a>
-                </td>
-            </tr>
-        </table>
-        <h3>Find me elsewhere on the internet:</h3>
+        <p>
+            I accept paid writing commissions on a range of topics and would love to hear from you.
+            To discuss your writing needs - or for any other queries - please email me:
+        </p>
+        <div class="email">
+            <a class="email" href="mailto:kimbarrett92@gmail.com" target="_blank">
+                kimbarrett92@gmail.com
+            </a>
+        </div>
+    </div>
+    <div class="footer">
         <ul class="profile_list">
+            <li><a href="https://twitter.com/kimbarrett92" target="_blank">Twitter</a></li>
+            <li>·</li>
             <li><a href="https://medium.com/@kimbarrett92" target="_blank">Medium</a></li>
+            <li>·</li>
             <li><a href="https://github.com/kbarrett" target="_blank">GitHub</a></li>
         </ul>
+        <p>© 2019 Kim Barrett. All Rights Reserved.</p>
     </div>
-    <p class="footer">© 2019 Kim Barrett. All Rights Reserved.</p>
 </body>
 
 </html>
