--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,16 @@
             </tr>
             </table>
     </div>
-    <p class="footer">© 2019 Kim Barrett. All Rights Reserved.</p>
+    <div class="footer">
+        <ul class="profile_list">
+            <li><a href="https://twitter.com/kimbarrett92" target="_blank">Twitter</a></li>
+            <li>·</li>
+            <li><a href="https://medium.com/@kimbarrett92" target="_blank">Medium</a></li>
+            <li>·</li>
+            <li><a href="https://github.com/kbarrett" target="_blank">GitHub</a></li>
+        </ul>
+        <p>© 2019 Kim Barrett. All Rights Reserved.</p>
+    </div>
 </body>
 
 </html>
