--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,15 @@
     <div class="contents">
         <h3>See below for some examples of my previous work.</h3>
         <table class="portfolio_table">
+			<tr>
+                <td>21st June 2019</td>
+                <td>
+                    <img class="portfolio_source_image" src="./images/medium.png"/>
+                </td>
+                <td>
+                    <a href="https://medium.com/@kimbarrett92/what-the-buccaneer-is-a-swashbuckler-a233be3a7d54">What the buccaneer is a swashbuckle?</a>
+                </td>
+            </tr>
             <tr>
                 <td>13th June 2019</td>
                 <td>
@@ -29,7 +38,7 @@
                 <td>
                     <a href="https://medium.com/@kimbarrett92/poison-by-any-other-name-6705206934d4">Poison by any other name</a>
                 </td>
-            </tr>
+			</tr>
             </table>
     </div>
     <div class="footer">
