Add "The tomb of Alice Chaucer" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,15 @@
         <h3>See below for some examples of my previous work.</h3>
         <table class="portfolio_table">
 			<tr>
+                <td>5th July 2019</td>
+                <td>
+                    <img class="portfolio_source_image" src="./images/medium.png"/>
+                </td>
+                <td>
+                    <a href="https://medium.com/@kimbarrett92/the-tomb-of-alice-chaucer-33e5654bab36">The tomb of Alice Chaucer</a>
+                </td>
+            </tr>
+            <tr>
                 <td>21st June 2019</td>
                 <td>
                     <img class="portfolio_source_image" src="./images/medium.png"/>
