Add "A short history of heart-burial" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,15 @@
         <h3>See below for some examples of my previous work.</h3>
         <table class="portfolio_table">
 			<tr>
+                <td>9th July 2019</td>
+                <td>
+                    <img class="portfolio_source_image" src="./images/medium.png"/>
+                </td>
+                <td>
+                    <a href="https://medium.com/p/a-short-history-of-heart-burial-25b13240de8e">A short history of heart-burial</a>
+                </td>
+            </tr>
+            <tr>
                 <td>5th July 2019</td>
                 <td>
                     <img class="portfolio_source_image" src="./images/medium.png"/>
