Add "How to write code that’s easy to read" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,15 @@
     <div class="contents">
         <h3>See below for some examples of my previous work.</h3>
         <table class="portfolio_table">
+            <tr>
+                <td>1st August 2019</td>
+                <td>
+                    <img class="portfolio_source_image" src="./images/medium.png"/>
+                </td>
+                <td>
+                    <a href="https://medium.com/p/how-to-write-code-thats-easy-to-read-12c5b97e7b4e">How to write code that’s easy to read</a>
+                </td>
+            </tr>
 			<tr>
                 <td>9th July 2019</td>
                 <td>
