Make it look more "normal".

--- a/index.html
+++ b/index.html
@@ -4,35 +4,38 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <div class="header">
         <div class="header_text">
-            <h1 class="title">Kim Barrett</h1>
-            <h1 class="subtitle">Freelance writer</h1>
+            <h1>Kim Barrett</h1>
+            <h2>Freelance writer</h2>
         </div>
     </div>
     <ul class="nav_bar">
         <li class="current"><a href="./index.html">About Me</a></li>
         <li><a href="./portfolio.html">Portfolio</a></li>
-        <li class="right_nav_button"><a href="./contact.html">Contact</a></li>
+        <li><a href="./contact.html">Contact</a></li>
     </ul>
-    <div class="contents">
-        <img class="headshot" src="./images/headshot.jpg" alt="Photo of Kim" />
-        <p>I'm a freelance writer living in Oxford, UK.</p>
-        <p>
-            I worked as a Java software developer for 5 years.
-            During this time I developed a deep interest in testing and architecting 
-            code to be easily tested.
-            I worked with AWS, micro-services and serverless architecture.
-            I am always keen to share, through writing, the skills and techniques I developed.
-        </p>
-        <p>
-            My other interests include language, sexuality and mental health, but 
-            I love learning more and will write about most topics.
-        </p>
-        <p>Please <a href="./contact.html">get in touch</a> to discuss your requirements.</p>
+    <div class="contents_wrapper">
+        <div class="contents">
+            <img class="headshot" src="./images/headshot.jpg" alt="Photo of Kim" />
+            <p>I'm a freelance writer living in Oxford, UK.</p>
+            <p>
+                I worked as a Java software developer for 5 years.
+                During this time I developed a deep interest in testing and architecting 
+                code to be easily tested.
+                I worked with AWS, micro-services and serverless architecture.
+                I am always keen to share, through writing, the skills and techniques I developed.
+            </p>
+            <p>
+                My other interests include language, sexuality and mental health, but 
+                I love learning more and will write about most topics.
+            </p>
+            <p>Please <a href="./contact.html">get in touch</a> to discuss your requirements.</p>
+        </div>
     </div>
     <div class="footer">
         <ul class="profile_list">
