--- a/portfolio.html
+++ b/portfolio.html
@@ -4,69 +4,72 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <div class="header">
         <div class="header_text">
-            <h1 class="title">Kim Barrett</h1>
-            <h1 class="subtitle">Freelance writer</h1>
+            <h1>Kim Barrett</h1>
+            <h2>Freelance writer</h1>
         </div>
     </div>
     <ul class="nav_bar">
         <li><a href="./index.html">About Me</a></li>
         <li class="current"><a href="./portfolio.html">Portfolio</a></li>
-        <li class="right_nav_button"><a href="./contact.html">Contact</a></li>
+        <li><a href="./contact.html">Contact</a></li>
     </ul>
-    <div class="contents">
-        <h3>See below for some examples of my previous work.</h3>
-        <table class="portfolio_table">
-            <tr>
-                <td>1st August 2019</td>
-                <td>
-                    <img class="portfolio_source_image" src="./images/medium.png"/>
-                </td>
-                <td>
-                    <a href="https://medium.com/p/how-to-write-code-thats-easy-to-read-12c5b97e7b4e">How to write code that’s easy to read</a>
-                </td>
-            </tr>
-			<tr>
-                <td>9th July 2019</td>
-                <td>
-                    <img class="portfolio_source_image" src="./images/medium.png"/>
-                </td>
-                <td>
-                    <a href="https://medium.com/p/a-short-history-of-heart-burial-25b13240de8e">A short history of heart-burial</a>
-                </td>
-            </tr>
-            <tr>
-                <td>5th July 2019</td>
-                <td>
-                    <img class="portfolio_source_image" src="./images/medium.png"/>
-                </td>
-                <td>
-                    <a href="https://medium.com/@kimbarrett92/the-tomb-of-alice-chaucer-33e5654bab36">The tomb of Alice Chaucer</a>
-                </td>
-            </tr>
-            <tr>
-                <td>21st June 2019</td>
-                <td>
-                    <img class="portfolio_source_image" src="./images/medium.png"/>
-                </td>
-                <td>
-                    <a href="https://medium.com/@kimbarrett92/what-the-buccaneer-is-a-swashbuckler-a233be3a7d54">What the buccaneer is a swashbuckle?</a>
-                </td>
-            </tr>
-            <tr>
-                <td>13th June 2019</td>
-                <td>
-                    <img class="portfolio_source_image" src="./images/medium.png"/>
-                </td>
-                <td>
-                    <a href="https://medium.com/@kimbarrett92/poison-by-any-other-name-6705206934d4">Poison by any other name</a>
-                </td>
-			</tr>
+    <div class="contents_wrapper">
+        <div class="contents">
+            <h3>See below for some examples of my previous work.</h3>
+            <table class="portfolio_table">
+                <tr>
+                    <td>1st August 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                    </td>
+                    <td>
+                        <a href="https://medium.com/p/how-to-write-code-thats-easy-to-read-12c5b97e7b4e">How to write code that’s easy to read</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>9th July 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                    </td>
+                    <td>
+                        <a href="https://medium.com/p/a-short-history-of-heart-burial-25b13240de8e">A short history of heart-burial</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>5th July 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                    </td>
+                    <td>
+                        <a href="https://medium.com/@kimbarrett92/the-tomb-of-alice-chaucer-33e5654bab36">The tomb of Alice Chaucer</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>21st June 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                    </td>
+                    <td>
+                        <a href="https://medium.com/@kimbarrett92/what-the-buccaneer-is-a-swashbuckler-a233be3a7d54">What the buccaneer is a swashbuckle?</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>13th June 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                    </td>
+                    <td>
+                        <a href="https://medium.com/@kimbarrett92/poison-by-any-other-name-6705206934d4">Poison by any other name</a>
+                    </td>
+                </tr>
             </table>
+        </div>
     </div>
     <div class="footer">
         <ul class="profile_list">
