--- a/contact.html
+++ b/contact.html
@@ -4,29 +4,32 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <div class="header">
         <div class="header_text">
-            <h1 class="title">Kim Barrett</h1>
-            <h1 class="subtitle">Freelance writer</h1>
+            <h1>Kim Barrett</h1>
+            <h2>Freelance writer</h2>
         </div>
     </div>
     <ul class="nav_bar">
         <li><a href="./index.html">About Me</a></li>
         <li><a href="./portfolio.html">Portfolio</a></li>
-        <li class="current right_nav_button"><a href="./contact.html">Contact</a></li>
+        <li class="current"><a href="./contact.html">Contact</a></li>
     </ul>
-    <div class="contents">
-        <p>
-            I accept paid writing commissions on a range of topics and would love to hear from you.
-            To discuss your writing needs - or for any other queries - please email me:
-        </p>
-        <div class="email">
-            <a class="email" href="mailto:kimbarrett92@gmail.com" target="_blank">
-                kimbarrett92@gmail.com
-            </a>
+    <div class="contents_wrapper">
+        <div class="contents">
+            <p>
+                I accept paid writing commissions on a range of topics and would love to hear from you.
+                To discuss your writing needs - or for any other queries - please email me:
+            </p>
+            <div class="email">
+                <a class="email" href="mailto:kimbarrett92@gmail.com" target="_blank">
+                    kimbarrett92@gmail.com
+                </a>
+            </div>
         </div>
     </div>
     <div class="footer">
