--- a/portfolio.html
+++ b/portfolio.html
@@ -24,48 +24,80 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
-                    <td>1st August 2019</td>
+                    <td>19th September 2019</td>
                     <td>
-                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                        <img class="portfolio_source_image" src="./images/oxford_mail.jpg" />
                     </td>
                     <td>
-                        <a href="https://medium.com/p/how-to-write-code-thats-easy-to-read-12c5b97e7b4e">How to write code that’s easy to read</a>
+                        <a href="https://www.oxfordmail.co.uk/news/17900909.opinion-kim-barrett-discusses-make-cycling-safer-oxford-39-s-botley-road/">
+                            How can cycling in Oxford be made safer?
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>5th September 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/p/women-in-the-golden-age-of-piracy-745fb710f2">
+                            Women in the Golden Age of Piracy
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>1st August 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/p/how-to-write-code-thats-easy-to-read-12c5b97e7b4e">
+                            How to write code that’s easy to read
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>9th July 2019</td>
                     <td>
-                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
                     <td>
-                        <a href="https://medium.com/p/a-short-history-of-heart-burial-25b13240de8e">A short history of heart-burial</a>
+                        <a href="https://medium.com/p/a-short-history-of-heart-burial-25b13240de8e">
+                            A short history of heart-burial
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>5th July 2019</td>
                     <td>
-                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
                     <td>
-                        <a href="https://medium.com/@kimbarrett92/the-tomb-of-alice-chaucer-33e5654bab36">The tomb of Alice Chaucer</a>
+                        <a href="https://medium.com/@kimbarrett92/the-tomb-of-alice-chaucer-33e5654bab36">
+                            The tomb of Alice Chaucer
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>21st June 2019</td>
                     <td>
-                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
                     <td>
-                        <a href="https://medium.com/@kimbarrett92/what-the-buccaneer-is-a-swashbuckler-a233be3a7d54">What the buccaneer is a swashbuckle?</a>
+                        <a href="https://medium.com/@kimbarrett92/what-the-buccaneer-is-a-swashbuckler-a233be3a7d54">
+                            What the buccaneer is a swashbuckle?
+                        </a>
                     </td>
                 </tr>
                 <tr>
                     <td>13th June 2019</td>
                     <td>
-                        <img class="portfolio_source_image" src="./images/medium.png"/>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
                     <td>
-                        <a href="https://medium.com/@kimbarrett92/poison-by-any-other-name-6705206934d4">Poison by any other name</a>
+                        <a href="https://medium.com/@kimbarrett92/poison-by-any-other-name-6705206934d4">
+                            Poison by any other name
+                        </a>
                     </td>
                 </tr>
             </table>
