--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td>26th September 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/@kimbarrett92/a-brief-introduction-to-programming-e4ce9df4205a">
+                            A brief introduction to programming
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td>19th September 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/oxford_mail.jpg" />
