Emphasise some entries in the portfolio list.

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                     <td>
                         <img class="portfolio_source_image" src="./images/oxford_mail.jpg" />
                     </td>
-                    <td>
+                    <td class="important_portfolio_entry">
                         <a href="https://www.oxfordmail.co.uk/news/17900909.opinion-kim-barrett-discusses-make-cycling-safer-oxford-39-s-botley-road/">
                             How can cycling in Oxford be made safer?
                         </a>
@@ -50,7 +50,7 @@
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
-                    <td>
+                    <td class="important_portfolio_entry">
                         <a href="https://medium.com/p/women-in-the-golden-age-of-piracy-745fb710f2">
                             Women in the Golden Age of Piracy
                         </a>
