Add "All About Birth Control" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td>4th October 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/@kimbarrett92/all-about-birth-control-78a5f7b8099a">
+                            All About Birth Control
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td>26th September 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
