--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td>17th October 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
+                    </td>
+                    <td class="important_portfolio_entry">
+                        <a href="https://medium.com/p/how-bad-is-flying-b2343b345cb8">
+                            How bad is flying?
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td>4th October 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
