Avoid wrapping dates on large screens.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
-                    <td>17th October 2019</td>
+                    <td class="portfolio_date">17th October 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
@@ -35,7 +35,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>13th October 2019</td>
+                    <td class="portfolio_date">13th October 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/history_is_now_magazine.png" />
                     </td>
@@ -46,7 +46,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>4th October 2019</td>
+                    <td class="portfolio_date">4th October 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
@@ -57,7 +57,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>26th September 2019</td>
+                    <td class="portfolio_date">26th September 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
@@ -68,7 +68,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>19th September 2019</td>
+                    <td class="portfolio_date">19th September 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/oxford_mail.jpg" />
                     </td>
@@ -79,7 +79,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>5th September 2019</td>
+                    <td class="portfolio_date">5th September 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
@@ -90,7 +90,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>1st August 2019</td>
+                    <td class="portfolio_date">1st August 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
@@ -101,7 +101,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>9th July 2019</td>
+                    <td class="portfolio_date">9th July 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
@@ -112,7 +112,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>5th July 2019</td>
+                    <td class="portfolio_date">5th July 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
@@ -123,7 +123,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>21st June 2019</td>
+                    <td class="portfolio_date">21st June 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
@@ -134,7 +134,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>13th June 2019</td>
+                    <td class="portfolio_date">13th June 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
                     </td>
