--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">4th November 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/@kimbarrett92/whats-the-oldest-company-in-the-uk-ccadf86fb6ef">
+                            What's the Oldest Company in the UK?
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">17th October 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" />
