Add "Expressing Your Polyamory on Social Media" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">28th November 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" title="Polyamory Today on Medium" />
+                    </td>
+                    <td class="important_portfolio_entry">
+                        <a href="https://medium.com/polyamory-today/expressing-your-polyamory-on-social-media-8c9575a83cf8">
+                            Expressing Your Polyamory on Social Media
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">4th November 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" title="Medium" />
