--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 <tr>
                     <td class="portfolio_date">28th November 2019</td>
                     <td>
-                        <img class="portfolio_source_image" src="./images/medium.png" title="Polyamory Today on Medium" />
+                        <img class="portfolio_source_image" src="./images/polyamory_today.png" title="Polyamory Today on Medium" />
                     </td>
                     <td class="important_portfolio_entry">
                         <a href="https://medium.com/polyamory-today/expressing-your-polyamory-on-social-media-8c9575a83cf8">
