Add "Meanings Change Over Time" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">29th November 2019</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" title="Medium" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/@kimbarrett92/meanings-change-over-time-7c22e188ec00">
+                            Meanings Change Over Time
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">28th November 2019</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/polyamory_today.png" title="Polyamory Today on Medium" />
