Use logo from Medium (not Facebook) for Polyamory Today.

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">28th November 2019</td>
                     <td>
-                        <img class="portfolio_source_image" src="./images/polyamory_today.png" title="Polyamory Today on Medium" />
+                        <img class="portfolio_source_image" src="./images/polyamory_today.jpeg" title="Polyamory Today" />
                     </td>
                     <td>
                         <a href="https://medium.com/polyamory-today/expressing-your-polyamory-on-social-media-8c9575a83cf8">
