Add "The Fear of the Pitch" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">4th December 2019</td>
+                        <td>
+                            <img class="portfolio_source_image" src="./images/writing_cooperative.png" title="The Writing Cooperative" />
+                        </td>
+                        <td>
+                            <a href="https://writingcooperative.com/the-fear-of-the-pitch-96408246ade8">
+                                The Fear of the Pitch
+                            </a>
+                    </td>
+                </tr>
                 <tr>
                     <td class="portfolio_date">29th November 2019</td>
                     <td>
