--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">16th December 2019</td>
+                        <td>
+                            <img class="portfolio_source_image" src="./images/anxiety_uk.png" title="Anxiety UK" />
+                        </td>
+                        <td>
+                            <a href="https://www.anxietyuk.org.uk/blog/what-is-anxiety/">
+                                What is anxiety?
+                            </a>
+                    </td>
+                </tr>
+                <tr class="important_portfolio_entry">
                     <td class="portfolio_date">4th December 2019</td>
                         <td>
                             <img class="portfolio_source_image" src="./images/writing_cooperative.png" title="The Writing Cooperative" />
