--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">24th January 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/buzzfeed.png" title="BuzzFeed" />
+                    </td>
+                    <td>
+                        <a href="https://www.buzzfeed.com/kimbarrett92/the-magic-of-practical-magic-94nee8jv4">
+                            The Magic Of Practical Magic
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">22nd January 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/dabbler.png" title="Dabbler" />
