Remove deleted BuzzFeed article & add "Polyamory & the LGBT+ Community" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,11 +26,11 @@
                 <tr>
                     <td class="portfolio_date">24th January 2020</td>
                     <td>
-                        <img class="portfolio_source_image" src="./images/buzzfeed.png" title="BuzzFeed" />
+                        <img class="portfolio_source_image" src="./images/polyamory_today.jpeg" title="Polyamory Today" />
                     </td>
                     <td>
-                        <a href="https://www.buzzfeed.com/kimbarrett92/the-magic-of-practical-magic-94nee8jv4">
-                            The Magic Of Practical Magic
+                        <a href="https://medium.com/polyamory-today/polyamory-and-the-lgbt-community-3a8a52debbc3">
+                            Does Polyamory Fall Under the LGBT+ Umbrella?
                         </a>
                     </td>
                 </tr>
