--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">3rd February 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" title="Medium" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/@kimbarrett92/the-magic-of-practical-magic-2fadd0a5e421?source=friends_link&sk=7ecb6a88054e628ad0ec677297c54785">
+                            The Magic of "Practical Magic"
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">24th January 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/polyamory_today.jpeg" title="Polyamory Today" />
