Add "Learning to love yourself through tattoos" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">13th February 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" title="Medium" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/@kimbarrett92/learning-to-love-yourself-through-tattoos-71e5bf414ae4?source=friends_link&sk=b63533972f40240558848c92ac12963d">
+                            Learning to love yourself through tattoos
+                        </a>
+                    </td>
+                </tr>
                 <tr>
                     <td class="portfolio_date">9th February 2020</td>
                     <td>
