Add "Discussing Abortion Law in the UK" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr>
+                    <td class="portfolio_date">14th March 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/fearless_she_wrote.png" title="Fearless She Wrote" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/fearless-she-wrote/discussing-abortion-law-in-the-uk-c5eb82fa69bf?source=friends_link&sk=6c625c8293f951dfb0eb311963a18b57">
+                            Discussing Abortion Law in the UK
+                        </a>
+                    </td>
+                </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">13th February 2020</td>
                     <td>
