Add "How Lizard Was Born" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">4th April 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/short_kid_stories.png" title="Short Kid Stories" />
+                    </td>
+                    <td>
+                        <a href="https://www.shortkidstories.com/story/how-lizard-was-born/">How Lizard Was Born</a> [Children's Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">14th March 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/fearless_she_wrote.png" title="Fearless She Wrote" />
