--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">8th April 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/buro.jpg" title="BURO." />
+                    </td>
+                    <td>
+                        <a href="https://www.buro247.com/experience/experience/relationship-tests-in-self-isolation">
+                            Polyamory in a Pandemic
+                        </a>
+                    </td>
+                </tr>
                 <tr>
                     <td class="portfolio_date">4th April 2020</td>
                     <td>
