Add "How to Go for a Walk" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr>
+                    <td class="portfolio_date">16th April 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/pandemic_diaries.jpeg" title="Pandemic Diaries" />
+                    </td>
+                    <td>
+                        <a href="http://pandemicdiaries.us/how-to-go-for-a-walk-b4cc8eb0f133">
+                            How to Go for a Walk
+                        </a>
+                    </td>
+                </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">8th April 2020</td>
                     <td>
