--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">24th April 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/huffpost.jpg" title="Huffington Post" />
+                    </td>
+                    <td>
+                        <a href="https://www.huffingtonpost.co.uk/entry/sex-anxiety-mental-health_uk_5ea05872c5b6b2e5b83b5788">
+                            This Is How Anxiety And Panic Attacks Have Changed My Sex Life
+                        </a>
+                    </td>
+                </tr>
                 <tr>
                     <td class="portfolio_date">16th April 2020</td>
                     <td>
