Added "Wake Up Fully Refreshed Each Morning" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">1st May 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/the_ascent.png" title="The Ascent" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/the-ascent/wake-up-fully-refreshed-each-morning-e330230e17cc?source=friends_link&sk=3c2d13f8d7027218b742326a941f9f98">
+                            Wake Up Fully Refreshed Each Morning
+                        </a>
+                    </td>
+                </tr>
                 <tr>
                     <td class="portfolio_date">24th April 2020</td>
                     <td>
